--- a/packages/snaps-execution-environments/src/index.ejs
+++ b/packages/snaps-execution-environments/src/index.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
 
-  <title>MetaMask Snaps execution environment</title>
+  <title>MetaMask Snaps Execution Environment</title>
   <script><%= lockdownScript %></script>
 </head>
 <body>
